personal-portfolio/src/components/About.scss
/// About Page --------------------------- >

.About--Page {
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  display: block;
  margin-bottom: 1em;


  /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2) {
    height: auto;
    
  }

/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2) { 
    
    

  }

/* ----------- iPhone 6+, 7+ and 8+ ----------- */

  /* Portrait and Landscape */
  @media screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3) { 


  }

  /* ----------- iPhone X ----------- */

  /* Portrait and Landscape */
  @media screen 
    and (min-device-width: 375px) 
    and (max-device-width: 812px) 
    and (-webkit-min-device-pixel-ratio: 3) { 
  }
}

    @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
      
    }


@media all and (max-width: 768px) {
  h1 {
    font-size: 40px !important;
  }

  
}

.Content--Container {
  font-family: 'Raleway', sans-serif;
  display: block;
  height: 101vh;  
  
  text-align: left;
  cursor: none !important;
  overflow: hidden;

  /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2) {
    
    
  }

/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2) { 
    
  }

/* ----------- iPhone 6+, 7+ and 8+ ----------- */

  /* Portrait and Landscape */
  @media screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3) { 

  }

  /* ----------- iPhone X ----------- */

  /* Portrait and Landscape */
  @media screen 
    and (min-device-width: 375px) 
    and (max-device-width: 812px) 
    and (-webkit-min-device-pixel-ratio: 3) { 

  }
}

@media all and (max-width: 768px) {
  h1 {
    
  }
}



.Left--Container {
  background-color: rgb(33, 33, 33, 0.95);
  width: 60em;
  height: 101vh;
  // margin: auto;
  overflow: hidden;
  border-radius: 4px;
  display: block;
  position: absolute;
  z-index: 5;
  pointer-events: none;

}

.Left--Main {
  height: 100vh;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  
  

     /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2) {

  }

/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 375px) 
  // and (max-device-width: 667px) 
  // and (-webkit-min-device-pixel-ratio: 2) 
  { 
    padding-left: 20px;
    padding-right: 20px;
    width: 20em
  }

/* ----------- iPhone 6+, 7+ and 8+ ----------- */

  /* Portrait and Landscape */
  @media screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3) { 
    margin: auto;
    display: flex;
    flex-direction: column;
  }

  /* ----------- iPhone X ----------- */

  /* Portrait and Landscape */
  @media screen 
    and (min-device-width: 375px) 
    and (max-device-width: 812px) 
    and (-webkit-min-device-pixel-ratio: 3) { 
      margin-left: 10px !important;
      display: flex;
      flex-direction: column;
  }

  /* iPads (portrait) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
    width: 40em;
    padding-left: auto;
    padding-right: auto;
}



  @media only screen and (min-width: 768px) {
    width: 30em;
    padding-left: auto;
    padding-right: auto;

    justify-content: space-around
    

    // font-size: 40px
  }

}





  

.Resume--And--Contact {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  

       /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 600px) 
   {
    // display: inline-block;
    // margin-top: 0;

    // &.Contact--Heading {
    //   font-size: 10px;
    // }

    
  }

/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 600px) 
  and (max-device-width: 667px) 
  and (-webkit-min-device-pixel-ratio: 2) { 
    padding-left: 10px;
    // height: 100vh;

  }

/* ----------- iPhone 6+, 7+ and 8+ ----------- */

  /* Portrait and Landscape */
  @media screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3) { 
    padding-left: 15px;
  }

  /* ----------- iPhone X ----------- */

  /* Portrait and Landscape */
  @media screen 
    and (min-device-width: 375px) 
    and (max-device-width: 812px) 
    and (-webkit-min-device-pixel-ratio: 3) { 
  }
}

.View--Resume--Button {
  text-align: center;

  border-color: #08FDD8;
  border-radius: 4px;
  color: black;
  background-color: #08FDD8;
  font-size: 20px;
  cursor: pointer;
  pointer-events: auto;
  text-decoration: none;
  
/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 320px) 
  {
    border-color: #08FDD8;
    padding: 4px 5px;
    border-radius: 4px;
    color: black;
    background-color: #08FDD8;
    font-size: 20px;
    cursor: pointer;
    pointer-events: auto;
    text-decoration: none;
    // margin-top: 20px;
    // margin-bottom: 20px;
  }

/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 600px) 
  { 

  }

/* ----------- iPhone 6+, 7+ and 8+ ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3) { 
    margin-top: 10em;
    font-size: 13px;
  }

  /* ----------- iPhone X ----------- */

  /* Portrait and Landscape */
  @media only screen 
    and (min-device-width: 375px) 
    and (max-device-width: 812px) 
    and (-webkit-min-device-pixel-ratio: 3) { 
      margin-top: 14em;
      font-size: 13px;
  }
  @media only screen and (min-width: 768px) {
  padding: 2em 2em;

}
}









.Contact {
  color: white;

         /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2) {
    font-size: 15px;

    
  }

/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 600px) 
  
   { 
    h2 {
      font-size: 18px;
      text-decoration: underline;
      padding-bottom: 2px;
      }
    p {
      font-size: 15px;
    }
  }

/* ----------- iPhone 6+, 7+ and 8+ ----------- */

  /* Portrait and Landscape */
  @media screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3) { 

  }

  /* ----------- iPhone X ----------- */

  /* Portrait and Landscape */
  @media screen 
    and (min-device-width: 375px) 
    and (max-device-width: 812px) 
    and (-webkit-min-device-pixel-ratio: 3) { 
  }

}


.Languages {
  color: white;

         /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2) {
    // max-width: 300px;
    // margin-top: 10px;

    h2 {
      font-size: 20px;
    }

    


    
  }

/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 600px)  { 


  }

/* ----------- iPhone 6+, 7+ and 8+ ----------- */

  /* Portrait and Landscape */
  @media screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3) { 

  }

  /* ----------- iPhone X ----------- */

  /* Portrait and Landscape */
  @media screen 
    and (min-device-width: 375px) 
    and (max-device-width: 812px) 
    and (-webkit-min-device-pixel-ratio: 3) { 
      // margin-top: 14em;
      // font-size: 13px;
  }
}

// .Right--Container {
  
// }

.Bio {
  color: white;
  
  h1 {
    color: red
  }

  p {
    color: white
  }
  
         /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2) {
    
    

    h1 {
      font-size: 2em !important;
    }
  
    h2 {
  
    }
  
    p {
      color: white;
      font-size: 16px !important;
    }

    a {
      color: white
    }    
    
  }
  

/* ----------- iPhone 6, 6S, 7 and 8 ----------- */

  /* Portrait and Landscape */
  @media only screen 
  and (min-device-width: 600px) 
  // and (max-device-width: 667px) 
  // and (-webkit-min-device-pixel-ratio: 2)
   { 

    

  }

/* ----------- iPhone 6+, 7+ and 8+ ----------- */

  /* Portrait and Landscape */
  @media screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (-webkit-min-device-pixel-ratio: 3) { 
    padding-left: 0;
  }

  /* ----------- iPhone X ----------- */

  /* Portrait and Landscape */
  @media screen 
    and (min-device-width: 375px) 
    and (max-device-width: 812px) 
    and (-webkit-min-device-pixel-ratio: 3) { 
      // margin-top: 14em;
      // font-size: 13px;
  }

    @media only screen and (min-width: 768px) {

    
    h1 {
      font-size: 4em !important;
    }
  
    h2 {
  
    }
  
    p {
      color: white;
      font-size: 24px !important;
    }

    a {
      color: white
    }    
    
  }

  }

